<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/appearance">

        <SwitchPreferenceCompat
            android:key="dark_theme"
            android:title="@string/dark_theme"
            android:summary="@string/dark_theme_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="font_size"
            android:title="@string/font_size"
            android:entries="@array/font_size_labels"
            android:entryValues="@array/font_size_values"
            android:defaultValue="1.0"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/language">

        <ListPreference
            android:key="locale_preference"
            android:title="@string/language"
            android:entries="@array/language_labels"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data">

        <Preference
            android:key="clear_data"
            android:title="@string/clear_data"
            android:summary="@string/clear_data_summary" />

    </PreferenceCategory>

</PreferenceScreen>
