<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/sequenceListFragment">

    <fragment
        android:id="@+id/sequenceListFragment"
        android:name="com.example.timerapp.ui.main.SequenceListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_sequence_list">

        <action
            android:id="@+id/action_sequenceList_to_edit"
            app:destination="@id/editSequenceFragment" />
        <action
            android:id="@+id/action_sequenceList_to_timer"
            app:destination="@id/timerFragment" />
    </fragment>

    <fragment
        android:id="@+id/editSequenceFragment"
        android:name="com.example.timerapp.ui.edit.EditSequenceFragment"
        android:label="@string/edit_sequence"
        tools:layout="@layout/fragment_edit_sequence">
        <argument
            android:name="sequenceId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/timerFragment"
        android:name="com.example.timerapp.ui.timer.TimerFragment"
        android:label="@string/timer"
        tools:layout="@layout/fragment_timer">
        <argument
            android:name="sequenceId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.timerapp.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>
